# ICCAD22_composition

./: README.md
8051_submodules/8051_memory_interface/: CMakeLists.txt  property_one.sva
8051_submodules/8051_memory_interface/app/: main.cc
8051_submodules/8051_memory_interface/include/: memory_interface_three_ports.h
8051_submodules/8051_memory_interface/refinement/: ref-rel-ram-path-inst-cond.json  ref-rel-ram-path-var-map.json  ref_map_ram_out.json  ref_map_rom_out.json
8051_submodules/8051_memory_interface/src/: irom_port_ila.cc  irom_xram_integration_port.cc  pc_port.cc
8051_submodules/8051_memory_interface/verilog/: oc8051_defines.v  oc8051_memory_interface.v
bsg_composition/: CMakeLists.txt  README.md
bsg_composition/app/: main.cc
bsg_composition/cmake/: FindZ3.cmake
bsg_composition/include/: stream.h
bsg_composition/refinement/: ref-rel-inst-cond-down.json  ref-rel-inst-cond-up.json  ref-rel-inst-cond-upchild.json  ref-rel-var-map-down.json  ref-rel-var-map-up.json  ref-rel-var-map-upchild.json
bsg_composition/src/: downstream_ila.cc  upstream_child.cc  upstream_ila.cc
bsg_composition/verilog/: bsg_link_ddr_downstream.sv2v.v  bsg_link_ddr_upstream.sv2v.v
bsg_composition/verilog/include/: bsg_defines.v
flexnlp_pe_composition/: CMakeLists.txt  pe_act.v  pe_core.v  top_pe.v
flexnlp_pe_composition/app/: main.cc
flexnlp_pe_composition/include/: flex.h  pe_act_unit.h  pe_config.h  pe_core.h  top_config.h  uninterpreted_func.h  util.h
flexnlp_pe_composition/refinement/: ref-rel-inst-cond-peact.json  ref-rel-inst-cond-pecore.json  ref-rel-var-map-peact.json  ref-rel-var-map-pecore.json
flexnlp_pe_composition/src/: arch_state_pe.cc  config_state_pe.cc  init_conditions_pe.cc  interface_pe.cc  pe_act_instrs.cc  pe_config_instrs.cc  pe_core_instrs.cc  pe_store_instrs.cc  pe_top.cc  util.cc
flexnlp_pe_composition/verilog/: concat_ActUnit.v  concat_ActUnit_simply.v  concat_PECore.v  concat_PECore_simply.v
nvdla/cacc/: CMakeLists.txt
nvdla/cacc/app/: main.cc
nvdla/cacc/include/: cacc_ila.h
nvdla/cacc/refinement/: gen_refine.py  ref-rel-inst-cond.json  ref-rel-var-map.json
nvdla/cacc/src/: cacc_ila.cc
nvdla/cacc/verilog/: NV_DW_lsd.v  NV_NVDLA_CACC_CALC_fp_48b.v  NV_NVDLA_CACC_delivery_buffer.v  NV_NVDLA_CACC_dual_reg.v  NV_NVDLA_CACC_slcg.v  NV_NVDLA_cacc.v  RAMPDP_32X192_GL_M1_D2.v  RAMPDP_32X224_GL_M1_D2.v  RAMPDP_32X256_GL_M1_D2.v  RAMPDP_32X288_GL_M1_D2.v  nv_ram_rws_32x512_logic.v  nv_ram_rws_32x544_logic.v  nv_ram_rws_32x768_logic.v
nvdla/cmac/: CMakeLists.txt  README.md
nvdla/cmac/app/: main.cc
nvdla/cmac/include/: cmac_ila.h
nvdla/cmac/refinement/: gen_refine.py  ref-rel-inst-cond.json  ref-rel-var-map.json
nvdla/cmac/src/: cmac_ila.cc
nvdla/cmac/verilog/: NV_NVDLA_CMAC_CORE_MAC_exp.v  NV_NVDLA_CMAC_CORE_MAC_mul.v  NV_NVDLA_CMAC_CORE_MAC_nan.v  NV_NVDLA_CMAC_CORE_cfg.v  NV_NVDLA_CMAC_CORE_mac.v  NV_NVDLA_CMAC_CORE_slcg.v  NV_NVDLA_CMAC_core.v  NV_NVDLA_cmac.v
nvdla/csc/: CMakeLists.txt
nvdla/csc/app/: main.cc
nvdla/csc/include/: csc.h  csc_config.h
nvdla/csc/nvdla/bdma/: NV_NVDLA_BDMA_cq.v  NV_NVDLA_BDMA_store.v  NV_NVDLA_bdma.v
nvdla/csc/nvdla/cacc/: NV_NVDLA_CACC_CALC_fp_48b.v  NV_NVDLA_CACC_CALC_int16.v  NV_NVDLA_CACC_CALC_int8.v  NV_NVDLA_CACC_assembly_buffer.v  NV_NVDLA_CACC_assembly_ctrl.v  NV_NVDLA_CACC_calculator.v  NV_NVDLA_CACC_delivery_ctrl.v  NV_NVDLA_CACC_regfile.v  NV_NVDLA_cacc.v
nvdla/csc/nvdla/car/: NV_NVDLA_sync3d.v  NV_NVDLA_sync3d_c.v  NV_NVDLA_sync3d_s.v
nvdla/csc/nvdla/cbuf/: NV_NVDLA_cbuf.v
nvdla/csc/nvdla/cdma/: NV_NVDLA_CDMA_CVT_cell.v  NV_NVDLA_CDMA_IMG_ctrl.v  NV_NVDLA_CDMA_IMG_pack.v  NV_NVDLA_CDMA_IMG_sg.v  NV_NVDLA_CDMA_IMG_sg2pack_fifo.v  NV_NVDLA_CDMA_cvt.v  NV_NVDLA_CDMA_dc.v  NV_NVDLA_CDMA_dma_mux.v  NV_NVDLA_CDMA_dual_reg.v  NV_NVDLA_CDMA_img.v  NV_NVDLA_CDMA_regfile.v  NV_NVDLA_CDMA_shared_buffer.v  NV_NVDLA_CDMA_status.v  NV_NVDLA_CDMA_wg.v  NV_NVDLA_CDMA_wt.v  NV_NVDLA_cdma.v
nvdla/csc/nvdla/cdp/: NV_NVDLA_CDP_DP_INTP_unit.v  NV_NVDLA_CDP_DP_LUT_CTRL_unit.v  NV_NVDLA_CDP_DP_LUT_ctrl.v  NV_NVDLA_CDP_DP_MUL_unit.v  NV_NVDLA_CDP_DP_bufferin.v  NV_NVDLA_CDP_DP_cvtin.v  NV_NVDLA_CDP_DP_cvtout.v  NV_NVDLA_CDP_DP_intp.v  NV_NVDLA_CDP_DP_lut.v  NV_NVDLA_CDP_DP_mul.v  NV_NVDLA_CDP_DP_nan.v  NV_NVDLA_CDP_DP_sum.v  NV_NVDLA_CDP_DP_syncfifo.v  NV_NVDLA_CDP_RDMA_REG_dual.v  NV_NVDLA_CDP_RDMA_cq.v  NV_NVDLA_CDP_RDMA_eg.v  NV_NVDLA_CDP_RDMA_ig.v  NV_NVDLA_CDP_RDMA_reg.v  NV_NVDLA_CDP_REG_dual.v  NV_NVDLA_CDP_dp.v  NV_NVDLA_CDP_rdma.v  NV_NVDLA_CDP_reg.v  NV_NVDLA_CDP_wdma.v  NV_NVDLA_cdp.v  int_sum_block.v
nvdla/csc/nvdla/cmac/: NV_NVDLA_CMAC_CORE_MAC_exp.v  NV_NVDLA_CMAC_CORE_MAC_mul.v  NV_NVDLA_CMAC_CORE_active.v  NV_NVDLA_CMAC_CORE_mac.v  NV_NVDLA_CMAC_CORE_rt_in.v  NV_NVDLA_CMAC_CORE_rt_out.v  NV_NVDLA_CMAC_core.v  NV_NVDLA_CMAC_reg.v  NV_NVDLA_cmac.v
nvdla/csc/nvdla/csb_master/: NV_NVDLA_CSB_MASTER_csb2falcon_fifo.v  NV_NVDLA_CSB_MASTER_falcon2csb_fifo.v  NV_NVDLA_csb_master.v
nvdla/csc/nvdla/csc/: NV_NVDLA_CSC_SG_dat_fifo.v  NV_NVDLA_CSC_SG_wt_fifo.v  NV_NVDLA_CSC_WL_dec.v  NV_NVDLA_CSC_dl.v  NV_NVDLA_CSC_dual_reg.v  NV_NVDLA_CSC_pra_cell.v  NV_NVDLA_CSC_regfile.v  NV_NVDLA_CSC_sg.v  NV_NVDLA_CSC_wl.v  NV_NVDLA_csc.v  NV_NVDLA_csc_top.v
nvdla/csc/nvdla/glb/: NV_NVDLA_GLB_csb.v  NV_NVDLA_GLB_ic.v  NV_NVDLA_glb.v
nvdla/csc/nvdla/nocif/: NV_NVDLA_CVIF_CSB_reg.v  NV_NVDLA_CVIF_READ_IG_arb.v  NV_NVDLA_CVIF_READ_IG_bpt.v  NV_NVDLA_CVIF_READ_IG_cvt.v  NV_NVDLA_CVIF_READ_IG_spt.v  NV_NVDLA_CVIF_READ_cq.v  NV_NVDLA_CVIF_READ_eg.v  NV_NVDLA_CVIF_READ_ig.v  NV_NVDLA_CVIF_WRITE_IG_arb.v  NV_NVDLA_CVIF_WRITE_cq.v  (+27 more)
nvdla/csc/refinement/: ref-rel-inst-cond-csc.json  ref-rel-var-map-csc.json
nvdla/csc/src/: csc_input.cc  csc_instrs.cc  csc_state.cc  csc_top.cc
secure_soc/: CMakeLists.txt  oc8051.json
secure_soc/app/: main.cc
secure_soc/include/: helper.h  hl_ila.h
secure_soc/include/simple/: lib.h
secure_soc/refinement/: ref-rel-inst-cond.json  ref-rel-var-map.json
secure_soc/src/: helper.cc  lib.cc
secure_soc/verilog/: oc8051_defines.v  oc8051_gm_top.v  run.tcl
(+117 files in other folders)
